--- a/package.json
+++ b/package.json
@@ -65,7 +65,9 @@
   },
   "dependencies": {
     "gulp-sass-glob": "^1.1.0",
+    "inputmask": "^5.0.6",
     "jquery": "^3.6.0",
+    "jquery-modal": "^0.9.2",
     "minimist": "^1.2.5",
     "swiper": "^6.6.1"
   }
