--- a/package.json
+++ b/package.json
@@ -68,7 +68,8 @@
     "inputmask": "^5.0.6",
     "jquery": "^3.6.0",
     "jquery-modal": "^0.9.2",
+    "lazysizes": "^5.3.2",
     "minimist": "^1.2.5",
-    "swiper": "^6.6.1"
+    "swiper": "^6.8.2"
   }
 }
