--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "jquery-modal": "^0.9.2",
     "lazysizes": "^5.3.2",
     "minimist": "^1.2.5",
+    "rfs": "^9.0.5",
     "swiper": "^6.8.2"
   }
 }
